--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /HospiceApp/.vs/HospiceApp/FileContentIndex/8d660ac8-1e15-4d82-9f67-6661b789902d.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/9cd49cd6-cf19-470e-9193-9e5d1a744a6f.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/e1152109-adb2-4287-a4b0-f12548f4fffa.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/836188ab-fdeb-4eeb-8e98-c87f28c2ccb0.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/de538f29-2e76-4081-bc28-dee3dc71ec54.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/0200f707-42b5-4bb5-9a3f-b23cd175b8de.vsidx
