--- a/HospiceApp/MauiApp1/MauiApp1.csproj
+++ b/HospiceApp/MauiApp1/MauiApp1.csproj
@@ -63,8 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ViewModels\" />
-	  <Folder Include="Views\" />
+	  <MauiXaml Update="Views\NewPage1.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
