added some models, some arent complete and we need to make models for recieving blob data from the API.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /HospiceApp/.vs/HospiceApp/FileContentIndex/836188ab-fdeb-4eeb-8e98-c87f28c2ccb0.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/de538f29-2e76-4081-bc28-dee3dc71ec54.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/0200f707-42b5-4bb5-9a3f-b23cd175b8de.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/506e663e-285a-462b-8f5d-e9bca2834894.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/735ee1a5-14eb-4261-a981-b287e3428b41.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/8bf96d26-125f-47df-aea2-a079aa5ef61d.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/b82b51c9-3bdb-44c8-b34a-4849eabc71d2.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex/d34cd17a-3c8b-47ff-99fc-594289becd1f.vsidx
