added a few models related to the patient, changed the file structure too

--- a/HospiceApp/MauiApp1/MauiApp1.csproj
+++ b/HospiceApp/MauiApp1/MauiApp1.csproj
@@ -57,6 +57,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <AndroidResource Remove="Models\BridgeModels\**" />
+	  <AndroidResource Remove="Models\CaregiverModels\**" />
+	  <Compile Remove="Models\BridgeModels\**" />
+	  <Compile Remove="Models\CaregiverModels\**" />
+	  <EmbeddedResource Remove="Models\BridgeModels\**" />
+	  <EmbeddedResource Remove="Models\CaregiverModels\**" />
+	  <MauiCss Remove="Models\BridgeModels\**" />
+	  <MauiCss Remove="Models\CaregiverModels\**" />
+	  <MauiXaml Remove="Models\BridgeModels\**" />
+	  <MauiXaml Remove="Models\CaregiverModels\**" />
+	  <None Remove="Models\BridgeModels\**" />
+	  <None Remove="Models\CaregiverModels\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -66,11 +81,6 @@
 	  <MauiXaml Update="Views\NewPage1.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Models\CaregiverModels\" />
-	  <Folder Include="Models\BridgeModels\" />
 	</ItemGroup>
 
 </Project>
