added a few models related to the patient, changed the file structure too

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 /HospiceApp/.vs/HospiceApp/FileContentIndex/8bf96d26-125f-47df-aea2-a079aa5ef61d.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/b82b51c9-3bdb-44c8-b34a-4849eabc71d2.vsidx
 /HospiceApp/.vs/HospiceApp/FileContentIndex/d34cd17a-3c8b-47ff-99fc-594289becd1f.vsidx
+/HospiceApp/.vs/HospiceApp/FileContentIndex
+/HospiceApp/.vs/HospiceApp/CopilotIndices/0.2.1653.9816/CodeChunks.db-shm
+/HospiceApp/.vs/HospiceApp/CopilotIndices/0.2.1653.9816/CodeChunks.db
+/HospiceApp/.vs/HospiceApp/CopilotIndices/0.2.1653.9816/CodeChunks.db-wal
+/HospiceApp/.vs/HospiceApp/CopilotIndices/0.2.1653.9816/SemanticSymbols.db-shm
+/HospiceApp/.vs/HospiceApp/CopilotIndices/0.2.1653.9816/SemanticSymbols.db-wal
+/.gitignore
