--- a/HospiceApp/MauiApp1/MauiApp1.csproj
+++ b/HospiceApp/MauiApp1/MauiApp1.csproj
@@ -72,9 +72,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\Admin.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Models\Admin.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="ZXing.Net.Maui.Controls" Version="0.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
